# Pose-Estimation

./: README.md
Codes/: eval_rotation_cls_entropy_new_residual.py  lossFuncTest.py  rotation_cls_new.py  train_rotation_cls_entropy_new.py  train_rotation_cls_entropy_new_residual.py  train_rotation_rot_ctr.py
Codes/backup/: _d_center_model.py  center_est.py  center_est_pt_rot.py  classifier.py  eval_centerpts.py  eval_centerpts_local.py  eval_rotation_value_new.py  mid.py  provider.py  provider_ctrrot.py  rotation_est.py  rotation_est_new.py  train_center.py  train_cls.py  train_ctrrot.py  train_rotation.py  train_rotation_value.py  train_rotation_value_new.py
Codes/data/threeclass/: 8cls-1024-200-test.h5  8cls-128-200-test.h5  8cls-256-200-test.h5  8cls-512-200-test.h5  box_1024_test.h5  box_test_fix.h5  test_files.txt  train_files.txt
Dataset/8cls-1024-200-test/: 8cls-1024-200-test.h5
Dataset/8cls-1024-200-test/raw_data/: bottle_00001_158_254_220_0.03_0.03_-0.18.pcd  bottle_00001_227_4_105_0.01_-0.04_-0.28.pcd  bottle_00001_273_112_65_0.14_-0.04_-0.19.pcd  bottle_00001_289_168_143_0.16_-0.03_-0.30.pcd  bottle_00001_357_227_31_-0.00_0.06_-0.17.pcd  bottle_00002_134_167_168_0.06_-0.04_-0.29.pcd  bottle_00002_276_305_320_0.10_-0.11_-0.31.pcd  bottle_00002_54_46_234_0.10_-0.07_-0.34.pcd  bottle_00002_73_17_360_0.12_-0.10_-0.31.pcd  bottle_00002_74_260_128_0.10_-0.10_-0.30.pcd  bottle_00003_175_242_37_-0.00_0.01_-0.29.pcd  bottle_00003_1_305_146_0.00_-0.01_-0.28.pcd  bottle_00003_200_350_38_-0.01_-0.01_-0.30.pcd  bottle_00003_40_59_325_0.06_-0.02_-0.28.pcd  bottle_00003_96_102_333_0.11_-0.08_-0.29.pcd  bottle_00004_251_318_208_0.02_-0.05_-0.24.pcd  bottle_00004_3_6_178_0.00_-0.03_-0.22.pcd  bottle_00004_54_351_313_0.01_-0.04_-0.21.pcd  bottle_00004_55_42_59_0.05_-0.03_-0.21.pcd  bottle_00004_87_96_307_0.09_-0.05_-0.22.pcd  bottle_00005_163_224_348_0.01_-0.02_-0.28.pcd  bottle_00005_332_210_199_-0.02_0.01_-0.34.pcd  bottle_00005_46_158_7_0.04_-0.04_-0.26.pcd  bottle_00005_61_288_1_0.05_-0.05_-0.27.pcd  bottle_00005_91_74_289_0.12_-0.07_-0.28.pcd  box_00001_230_104_60_-0.04_-0.12_-0.48.pcd  box_00001_230_151_117_-0.06_-0.12_-0.50.pcd  box_00001_304_210_41_0.06_-0.04_-0.40.pcd  box_00001_322_242_346_0.00_-0.01_-0.30.pcd  box_00001_81_233_231_0.06_-0.04_-0.25.pcd  box_00002_137_356_154_0.01_-0.06_-0.25.pcd  box_00002_20_24_152_-0.03_-0.08_-0.24.pcd  box_00002_222_212_250_-0.01_-0.15_-0.46.pcd  box_00002_229_306_29_-0.05_-0.13_-0.51.pcd  box_00002_22_21_216_-0.03_-0.09_-0.24.pcd  box_00003_159_86_103_-0.04_-0.21_-0.44.pcd  box_00003_206_150_352_0.02_-0.20_-0.43.pcd  box_00003_243_346_328_-0.06_-0.14_-0.50.pcd  box_00003_248_177_19_-0.04_-0.15_-0.51.pcd  box_00003_274_245_152_-0.02_-0.07_-0.50.pcd  (+162 more)
Dataset/8cls-1024-2010-train/raw_data/: angles_file.txt  bottle_00001_103_312_164_0.15_-0.04_-0.21.pcd  bottle_00001_105_145_95_0.16_-0.04_-0.21.pcd  bottle_00001_146_41_119_0.08_0.04_-0.23.pcd  bottle_00001_155_12_102_0.06_0.05_-0.23.pcd  bottle_00001_164_190_90_0.03_0.05_-0.23.pcd  (+2007 more)
Dataset/8cls-128-2010-train/: 8cls-128-2010-train.h5
Pre-trained/posture_for_milk_carton/: 1195
Tools/blensor/: Capture.py
Tools/dataset_generator/pcd_prep/: CMakeLists.txt
Tools/dataset_generator/pcd_prep/src/: main.cpp
Tools/dataset_generator/pcd_to_h5/: CMakeLists.txt
Tools/dataset_generator/pcd_to_h5/include/: my_io.h
Tools/dataset_generator/pcd_to_h5/src/: main.cpp  my_io.cpp
Tools/dataset_generator/pcd_to_h5/v1/include/: my_io.h
Tools/dataset_generator/pcd_to_h5/v1/src/: main.cpp  my_io.cpp
Tools/labels_generator/: labels_generator.py
Tools/pcl-rs-capture/pcl/: CMakeLists.txt  example.hpp  rs-pcl.cpp
Tools/pointCloudVis/: CMakeLists.txt  package.xml
(+11404 files in other folders)
